change names and dashboard

--- a/views/UserViewBookings.xaml
+++ b/views/UserViewBookings.xaml
@@ -11,7 +11,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
     <UserControl.DataContext>
-        <viewModel:UserViewBooking/>
+        <viewModel:UserViewBookingsModel/>
     </UserControl.DataContext>
     
     <Grid Background="#eff2f7">
