--- a/views/userDashboard.xaml
+++ b/views/userDashboard.xaml
@@ -14,9 +14,9 @@
         <viewModel:UserViewModel/>
     </Window.DataContext>
 
-    <Window.Resources>
+   <Window.Resources>
 
-        <DataTemplate DataType="{x:Type viewModel:AddTimingsViewModel}">
+        <!--<DataTemplate DataType="{x:Type viewModel:AddTimingsViewModel}">
             <local:AddTimings/>
         </DataTemplate>
 
@@ -30,7 +30,7 @@
 
         <DataTemplate DataType="{x:Type viewModel:AddDoctorViewModel}">
             <local:AddDoctor/>
-        </DataTemplate>
+        </DataTemplate>-->
         <DataTemplate DataType="{x:Type viewModel:UserViewBookingsModel}">
             <local:UserViewBookings/>
         </DataTemplate>
@@ -128,8 +128,7 @@
                                    Margin="10,0,0,0"/>
                 </StackPanel>
                 <RadioButton Style="{StaticResource menuButton}"
-                                 Tag="{StaticResource color2}"
-                                 Command="{Binding ShowUserBookings}">
+                                 Tag="{StaticResource color2}">
                     <StackPanel Orientation="Horizontal">
                         <fa:FontAwesome Icon="Home" Margin="10,2,0,0" />
                         <TextBlock Text="Home" Margin="10,0,0,0"/>
@@ -138,7 +137,7 @@
                 <RadioButton Style="{StaticResource menuButton}"
                                  Tag="{StaticResource primaryBackColor1}"
                                  IsChecked="True"
-                                  >
+                                  Command="{Binding ShowUserBookings}" >
                     <StackPanel Orientation="Horizontal">
                         <fa:FontAwesome Icon="FileText" Margin="10,2,0,0"/>
                         <TextBlock Text="Book Appointments" Margin="10,0,0,0"/>
@@ -254,7 +253,7 @@
                                      StrokeThickness="2"
                                      >
                                                 <Ellipse.Fill>
-                                                    <ImageBrush ImageSource="C:\Users\arjkr\source\repos\MVVM_App\images\arjun12 (4).png"/>
+                                                    <ImageBrush ImageSource="C:\Users\ashal\source\repos\MVVM_App\images\arjun12 (4).png"/>
                                                 </Ellipse.Fill>
                                             </Ellipse>
                                         </DataTemplate>
