--- a/views/userDashboard.xaml
+++ b/views/userDashboard.xaml
@@ -28,8 +28,8 @@
             <local:AddConsult/>
         </DataTemplate>
 
-        <DataTemplate DataType="{x:Type viewModel:AddDoctorViewModel}">
-            <local:AddDoctor/>
+        <DataTemplate DataType="{x:Type viewModel:BookAppointmentViewModel}">
+            <local:BookAppointment/>
         </DataTemplate>
         <DataTemplate DataType="{x:Type viewModel:UserViewBookingsModel}">
             <local:UserViewBookings/>
@@ -138,7 +138,7 @@
                 <RadioButton Style="{StaticResource menuButton}"
                                  Tag="{StaticResource primaryBackColor1}"
                                  IsChecked="True"
-                                  >
+                                  Command="{Binding ShowBookApp}">
                     <StackPanel Orientation="Horizontal">
                         <fa:FontAwesome Icon="FileText" Margin="10,2,0,0"/>
                         <TextBlock Text="Book Appointments" Margin="10,0,0,0"/>
