--- a/views/AddTimings.xaml
+++ b/views/AddTimings.xaml
@@ -62,7 +62,7 @@
                 </StackPanel>
                 <StackPanel Grid.Row="6" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10">
                     <TextBlock x:Name="text9" Text="Doctor Availibility" Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="Bold" />
-                    <CheckBox x:Name="checker1" Width="15" VerticalAlignment="Center"  Margin="50,10" />
+                    <CheckBox x:Name="checker1" Width="15" VerticalAlignment="Center"  Margin="50,10" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked"/>
                     <TextBlock x:Name="text10" Text="10-6 on selected date" Width="200" Margin="-40,0" VerticalAlignment="Center" FontSize="11"  />
                 </StackPanel>
                 <StackPanel Grid.Row="7" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10,0,0">
@@ -110,11 +110,6 @@
                     <TextBlock Text=":" Width="10" VerticalAlignment="Center" FontSize="20" FontWeight="Bold"  />
                 </StackPanel>
 
-                <Canvas>
-
-                    <Image x:Name="img1" Source="C:\Users\arjkr\Downloads\R (1).jpg" Width="100" Height="100" Canvas.Left="566" Canvas.Top="147"/>
-
-                </Canvas>
 
                 <Button x:Name="btn1"  Grid.Row="9" Content="Add Timing" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="120,10,0,0" Padding="15 5" Width="120" Height="30" Background="CadetBlue" Foreground="black" FontSize="16" FontWeight="Bold" BorderThickness="0" Click="btn1_Click">
                     <Button.Template>
