--- a/views/userDashboard.xaml
+++ b/views/userDashboard.xaml
@@ -16,11 +16,11 @@
 
    <Window.Resources>
 
-        <!--<DataTemplate DataType="{x:Type viewModel:AddTimingsViewModel}">
+        <DataTemplate DataType="{x:Type viewModel:AddTimingsViewModel}">
             <local:AddTimings/>
         </DataTemplate>
 
-        <DataTemplate DataType="{x:Type viewModel:UpdateDoctor}">
+        <DataTemplate DataType="{x:Type viewModel:UpdateDoctorViewModel}">
             <local:UpdateDoctor/>
         </DataTemplate>
 
@@ -113,8 +113,6 @@
             </Border>
 
             <StackPanel Grid.Column="0">
-
-                <!--Logo-->
                 <StackPanel Orientation="Horizontal"
                                 Height="35"
                                 Margin="15,25,0,40">
@@ -135,19 +133,18 @@
                         <TextBlock Text="Home" Margin="10,0,0,0"/>
                     </StackPanel>
                 </RadioButton>
-                <RadioButton Style="{StaticResource menuButton}"
+        <RadioButton Style="{StaticResource menuButton}"
                                  Tag="{StaticResource primaryBackColor1}"
                                  IsChecked="True"
-
                                   Command="{Binding ShowBookApp}">
 
-                    <StackPanel Orientation="Horizontal">
-                        <fa:FontAwesome Icon="FileText" Margin="10,2,0,0"/>
-                        <TextBlock Text="Book Appointments" Margin="10,0,0,0"/>
-                    </StackPanel>
-                </RadioButton>
+        <StackPanel Orientation="Horizontal">
+            <fa:FontAwesome Icon="FileText" Margin="10,2,0,0"/>
+            <TextBlock Text="Book Appointments" Margin="10,0,0,0"/>
+        </StackPanel>
+</RadioButton>
 
-                <RadioButton Style="{StaticResource menuButton}"
+        <RadioButton Style="{StaticResource menuButton}"
                                  Tag="{StaticResource primaryBackColor1}"
                                  
                                  Command="{Binding ShowUserBookings}">
@@ -257,7 +254,7 @@
                                      StrokeThickness="2"
                                      >
                                                 <Ellipse.Fill>
-                                                    <ImageBrush ImageSource="C:\Users\ashal\source\repos\MVVM_App\images\arjun12 (4).png"/>
+                                                    <ImageBrush ImageSource="C:\Users\arjkr\source\repos\MVVM_App\images\arjun12 (4).png"/>
                                                 </Ellipse.Fill>
                                             </Ellipse>
                                         </DataTemplate>
