--- a/views/AddDoctor.xaml
+++ b/views/AddDoctor.xaml
@@ -17,7 +17,7 @@
 
         <!-- Main Content -->
 
-        <Border Background="White" CornerRadius="10" Margin="95,60,70,0" Padding="30" VerticalAlignment="Top">
+        <Border Background="White" CornerRadius="10" Margin="55,60,70,0" Padding="30" VerticalAlignment="Top">
 
             <Grid>
 
@@ -37,7 +37,7 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Row="1"  Margin="0,3,-38,18" Text="Enter the Information" FontSize="18" FontWeight="Bold" Grid.ColumnSpan="2"/>
+                <TextBlock Grid.Row="1"  Margin="0,3,-38,18" Text="Enter the Details" FontSize="18" FontWeight="Bold" Grid.ColumnSpan="2"/>
 
 
                 <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Left"  Margin="0,10,0,40">
@@ -65,7 +65,7 @@
                         </Button.Template>
                     </Button>
                     <Button x:Name="btn3"  Grid.Row="4" Content="Update Time" HorizontalAlignment="Right"
-                            VerticalAlignment="Top" Margin="10,-10,0,0" Padding="15 5" Width="70"
+                            VerticalAlignment="Top" Margin="10,0,0,0" Padding="15 5" Width="70"
                             Height="25" Background="CadetBlue" Foreground="White" FontSize="11"
                             FontWeight="SemiBold" BorderThickness="0"  Grid.RowSpan="4" Grid.ColumnSpan="4">
                         <Button.Template>
