--- a/views/AddTimings.xaml
+++ b/views/AddTimings.xaml
@@ -17,7 +17,7 @@
 
 
 
-        <Border Background="White" CornerRadius="10" Margin="20,10,20,0" Padding="30" VerticalAlignment="Top" Height="394">
+        <Border Background="White" CornerRadius="10" Margin="20,50,20,0" Padding="30" VerticalAlignment="Top" Height="400">
 
             <Grid Grid.Row="0" Margin="-4,-54,-4,-108">
 
@@ -111,16 +111,18 @@
                 </StackPanel>
 
 
-                <Button x:Name="btn1"  Grid.Row="9" Content="Add Timing" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="120,10,0,0" Padding="15 5" Width="120" Height="30" Background="CadetBlue" Foreground="black" FontSize="16" FontWeight="Bold" BorderThickness="0" Click="btn1_Click">
+                <Button x:Name="btn3"  Grid.Row="9"  Content="Update Time" HorizontalAlignment="Center"
+                            VerticalAlignment="Top" Margin="90,10,0,0" Padding="15 5" Width="90"
+                            Height="30" Background="CadetBlue" Foreground="White" FontSize="11"
+                            FontWeight="SemiBold" BorderThickness="0"  Grid.RowSpan="4" Grid.ColumnSpan="4" Click="btn1_Click">
                     <Button.Template>
-                        <ControlTemplate TargetType="Button">
-                            <Border CornerRadius="5">
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Border Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="5">
                                 <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             </Border>
                         </ControlTemplate>
                     </Button.Template>
                 </Button>
-
 
             </Grid>
 
