--- a/views/BookAppointment.xaml
+++ b/views/BookAppointment.xaml
@@ -12,9 +12,9 @@
     </UserControl.DataContext>
     <Viewbox>
         <Grid
-          Margin="5"
-          Height="670"
-          Width="1100">
+          Margin="0,-150,0,0"
+          Height="650"
+          Width="700">
 
             <!-- Header - Book Your Appointment -->
            
@@ -47,6 +47,7 @@
 
                     <!--<TextBlock Grid.Row="0"  Margin="0,20" Text="Enter the Information" FontSize="24" FontWeight="Bold"/>-->
 
+                    <TextBlock Grid.Row="0"   Text="Enter the Information" Margin="0,0,0,20" FontSize="18" FontWeight="Bold"/>
                     <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Left"  Margin="0,10">
 
                         <TextBlock x:Name="text1" Text="Select Consultation Type" Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="SemiBold" />
@@ -55,12 +56,12 @@
 
                     <StackPanel Grid.Row="2" Orientation="Horizontal"  HorizontalAlignment="Left" Margin="0,10">
                         <TextBlock x:Name="text2" Text="Select Doctor" Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="SemiBold"  />
-                        <ComboBox x:Name="Doctor" Width="250" VerticalAlignment="Center"  />
+                        <ComboBox x:Name="Doctor" Width="250" VerticalAlignment="Center" SelectionChanged="Doctor_SelectionChanged" />
                     </StackPanel>
 
                     <StackPanel Grid.Row="3" Orientation="Horizontal"  HorizontalAlignment="Left" Margin="0,10">
                         <TextBlock x:Name="text3" Text="Select Date " Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="SemiBold"/>
-                        <DatePicker x:Name="Datepicker" Width="250" VerticalAlignment="Center" SelectedDateChanged="Doctor_SelectionChanged"/>
+                        <DatePicker x:Name="Datepicker" Width="250" VerticalAlignment="Center" SelectedDateChanged="Date_SelectionChanged"/>
                     </StackPanel>
 
                     <StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10">
@@ -85,7 +86,7 @@
                             Content="Book Appointment"
 				            Grid.Row="7"
                             Grid.Column="0"
-                            HorizontalAlignment="Left"
+                            HorizontalAlignment="Center"
                             VerticalAlignment="Bottom" 
                             Width="180" Height="30"
                              Padding="15 5"
@@ -94,7 +95,7 @@
                             FontWeight="SemiBold"
                             BorderBrush="Black"
                             BorderThickness="1"
-                            Click="btn1_Click" >
+                            Click="btn1_Click" Margin="130,20,0,0">
 
 
                         <Button.Style>
