--- a/views/userDashboard.xaml
+++ b/views/userDashboard.xaml
@@ -146,7 +146,7 @@
 
                 <RadioButton Style="{StaticResource menuButton}"
                                  Tag="{StaticResource primaryBackColor1}"
-                                 >
+                                  Command="{Binding ShowUserBookings}">
                     <StackPanel Orientation="Horizontal">
                         <fa:FontAwesome Icon="User"  Margin="15,2,0,0" />
                         <TextBlock Text="View Appointments"  Margin="10,0,0,0"/>
