Registration,Login connection

--- a/views/AddTimings.xaml
+++ b/views/AddTimings.xaml
@@ -9,9 +9,9 @@
         xmlns:CustomControls="clr-namespace:MVVM_App.CustomControls" 
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <UserControl.DataContext>
+    <!--<UserControl.DataContext>
         <viewModel:AddTimings/>
-    </UserControl.DataContext>
+    </UserControl.DataContext>-->
 
     <Grid Grid.Row="0" >
 
